update config with base url

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 name: Japheth Crawford
 markdown: redcarpet
 pygments: true
-baseurl: "http://japhethcrawford.github.io/classblog"
+url: "http://japhethcrawford.github.io/classblog"
